# ChangeLog for dev-util/xfce4-dev-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce4-dev-tools-4.5.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-dev-tools-4.5.93.ebuild:
  Xfce-4.6 beta3

*xfce4-dev-tools-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-dev-tools-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
