@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-dev-tools-4.5.92.tar.bz2 62206 RMD160 07ae579d9e095d5c0801563e58152153b0dce095 SHA1 c37bc3090a7d8e6a0c1809b8658870931557135b SHA256 b9e95023ece242cf82c42387e50ba2ca6ee969419ca57b318bf2727e3e9e0bba
 DIST xfce4-dev-tools-4.5.93.tar.bz2 61761 RMD160 320426ab7449ef6bc1c5a7c58e9cc6f2aa003691 SHA1 25ff523fe849778ca98296ac825c109dfdfa1de2 SHA256 15921e3655ddd8dcb959bb891366b3d52daf9d07a8685eefb7937f603cdca7ef
+DIST xfce4-dev-tools-4.5.99.1.tar.bz2 63329 RMD160 cb9473e4c62e16f20bdd3dc73388e9e79a0c6a72 SHA1 9560f119d1bbe7385a1b6db11c070caa3de57dbe SHA256 4e91d1d33c14431171e525062d4ce687a401a3bdc571a00719cc499f1a8e0e6c
 EBUILD xfce4-dev-tools-4.5.92.ebuild 411 RMD160 f660b6771c0c7363220964a11ec0d817cae082e3 SHA1 9264c9dcb17837ef22f5203158dd9118b432a5cc SHA256 d9d30bb6d45681bc90da3643d11b3c3993aaf4c0fa5d114c465043b7e1212d85
 EBUILD xfce4-dev-tools-4.5.93.ebuild 411 RMD160 f660b6771c0c7363220964a11ec0d817cae082e3 SHA1 9264c9dcb17837ef22f5203158dd9118b432a5cc SHA256 d9d30bb6d45681bc90da3643d11b3c3993aaf4c0fa5d114c465043b7e1212d85
+EBUILD xfce4-dev-tools-4.5.99.1.ebuild 411 RMD160 f660b6771c0c7363220964a11ec0d817cae082e3 SHA1 9264c9dcb17837ef22f5203158dd9118b432a5cc SHA256 d9d30bb6d45681bc90da3643d11b3c3993aaf4c0fa5d114c465043b7e1212d85
 EBUILD xfce4-dev-tools-9999.ebuild 411 RMD160 f660b6771c0c7363220964a11ec0d817cae082e3 SHA1 9264c9dcb17837ef22f5203158dd9118b432a5cc SHA256 d9d30bb6d45681bc90da3643d11b3c3993aaf4c0fa5d114c465043b7e1212d85
-MISC ChangeLog 501 RMD160 c16b68966fc16368c8c65504bb14bf8fba1ab188 SHA1 523cf7d2561dfa20a51eef9857a07e8f1574129b SHA256 a3330c4c0c2ce58a1b9626f2ec7aa5895432c6df2b764d411ec1d7fcc77ac795
+MISC ChangeLog 646 RMD160 bd2d154b119d02a48d5a5ba7fa3a657a71526f73 SHA1 afe9005ad15d94dce78effa7a5415ef6245668b9 SHA256 48998a42fc394794feefb32c8e33bcb2a0aee66754d199ed4c7054407083c005
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEekACgkQKhnDs22gwa/G5gCg4Dg3CajfMNr6N+aZSigdBCnP
-izwAn0DYM3fQzdqw6a1cckLedUCM/QDR
-=O633
+iEYEARECAAYFAkl9xVcACgkQKhnDs22gwa+QiwCgoNOwfTwMJufwWj9FVv5bzk84
+jeMAoNBKSKKMAbzOuNvxStYhqiHxGmrc
+=HC49
 -----END PGP SIGNATURE-----
