@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="m4macros for autotools eclass and subversion builds"
+HOMEPAGE="http://foo-projects.org/~benny/projects/xfce4-dev-tools"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+DOCS="AUTHORS ChangeLog HACKING NEWS README"
